[FIX] eslint fixeas

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,13 +2,27 @@
     "compilerOptions": {
         "baseUrl": "src",
         "paths": {
-            "@components/*": ["./components/*"],
-            "@pages/*": ["./pages/*"],
-            "@styles/*": ["./styles/*"],
-            "@common/*": ["./common/*"],
-            "@layout/*": ["./layout/*"],
-            "@hooks/*": ["./hooks/*"],
-            "@services/*": ["./services/*"]
+            "@components/*": [
+                "./components/*"
+            ],
+            "@pages/*": [
+                "./pages/*"
+            ],
+            "@styles/*": [
+                "./styles/*"
+            ],
+            "@common/*": [
+                "./common/*"
+            ],
+            "@layout/*": [
+                "./layout/*"
+            ],
+            "@hooks/*": [
+                "./hooks/*"
+            ],
+            "@services/*": [
+                "./services/*"
+            ]
         }
     }
-} 
+}
